# GDY-Tri

./: .gitignore
gdy_basic_model/: Cargo.toml  README.md
gdy_basic_model/resources/: GDY_tri.msi  ads_table.yaml  gen_ads_model.py  project.yaml  write_lsf_script.py
gdy_basic_model/src/: editor.rs  external_info.rs  lib.rs  main.rs  param_writer.rs  parser.rs  test.rs
gdy_basic_model/src/assemble/: mod.rs
gdy_basic_model/src/atom/: mod.rs
gdy_basic_model/src/cell/: mod.rs
gdy_basic_model/src/external_info/: adsorbate_table.rs  element_table.rs  mod.rs  project.rs
gdy_basic_model/src/lattice/: mod.rs
gdy_basic_model/src/molecule/: mod.rs
gdy_data_visualization/: Cargo.toml  README.md  polar_heatmap.gpi
gdy_data_visualization/config_parser/: Cargo.toml
gdy_data_visualization/config_parser/src/: lib.rs
gdy_data_visualization/data_process/: Cargo.toml
gdy_data_visualization/data_process/src/: csv.rs  export_format.rs  lib.rs  misc_methods.rs  plot_data_struct.rs
gdy_data_visualization/gdy_visualize/: Cargo.toml
gdy_data_visualization/gdy_visualize/src/: main.rs
gdy_data_visualization/src/: lib.rs  main.rs
gdy_data_visualization/src/castep_energy/: config_parser.rs  manager.rs  mod.rs
gdy_data_visualization/src/data_processing/: csv.rs  export_format.rs  mod.rs  plot_data_struct.rs
gdy_data_visualization/src/misc_methods/: mod.rs
gdy_tri_models/: Cargo.toml  Potentials
gdy_tri_models/resources/: GDY_Sc_Sc_Sc.cell
gdy_tri_models/src/: main.rs
gdy_tri_models/src/edit/: mod.rs
gdy_tri_models/src/export/: mod.rs
gdy_tri_models/src/template/: mod.rs
