[package]
name = "gdy_tri_basic_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
castep_model_generator_backend = "0.1.0"
periodic_table = "0.3.2"
periodic-table-on-an-enum = "0.3.2"
indicatif = "0"
