[package]
name = "gdy_tri_basic_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
castep-model-core = "0.2.9"
castep_model_generator_backend = "2.1.3"
castep-periodic-table = "0.4"
indicatif = "0"
glob = "0"
rayon = "1.*"
