[package]
name = "gdy_visualize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config_parser = { path = "../config_parser" }
# data_process = { path = "../data_process" }
data_parser = { path = "../data_parser" }
csv = "1.1"
